# pki-parser

./: README.md  commit.py  commit.sh  do_commit.py  pyproject.toml
.github/: copilot-instructions.md
src/pki_parser/: cli.py  parser.py
src/pki_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_parser.py
tests/fixtures/: test_cert.pem
